@@ -73,6 +73,19 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|CannedTokenStream
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|MockAnalyzer
 import|;
 end_import
@@ -100,6 +113,19 @@ operator|.
 name|analysis
 operator|.
 name|MockTokenizer
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Token
 import|;
 end_import
 begin_import
@@ -154,6 +180,19 @@ operator|.
 name|document
 operator|.
 name|Field
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|TextField
 import|;
 end_import
 begin_import
@@ -236,6 +275,19 @@ operator|.
 name|store
 operator|.
 name|Directory
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|RAMDirectory
 import|;
 end_import
 begin_import
@@ -3625,6 +3677,401 @@ name|rewritten
 operator|instanceof
 name|TermQuery
 argument_list|)
+expr_stmt|;
+block|}
+comment|/** Tests PhraseQuery with terms at the same position in the query. */
+DECL|method|testZeroPosIncr
+specifier|public
+name|void
+name|testZeroPosIncr
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+specifier|final
+name|Token
+index|[]
+name|tokens
+init|=
+operator|new
+name|Token
+index|[
+literal|3
+index|]
+decl_stmt|;
+name|tokens
+index|[
+literal|0
+index|]
+operator|=
+operator|new
+name|Token
+argument_list|()
+expr_stmt|;
+name|tokens
+index|[
+literal|0
+index|]
+operator|.
+name|append
+argument_list|(
+literal|"a"
+argument_list|)
+expr_stmt|;
+name|tokens
+index|[
+literal|0
+index|]
+operator|.
+name|setPositionIncrement
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|tokens
+index|[
+literal|1
+index|]
+operator|=
+operator|new
+name|Token
+argument_list|()
+expr_stmt|;
+name|tokens
+index|[
+literal|1
+index|]
+operator|.
+name|append
+argument_list|(
+literal|"aa"
+argument_list|)
+expr_stmt|;
+name|tokens
+index|[
+literal|1
+index|]
+operator|.
+name|setPositionIncrement
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|tokens
+index|[
+literal|2
+index|]
+operator|=
+operator|new
+name|Token
+argument_list|()
+expr_stmt|;
+name|tokens
+index|[
+literal|2
+index|]
+operator|.
+name|append
+argument_list|(
+literal|"b"
+argument_list|)
+expr_stmt|;
+name|tokens
+index|[
+literal|2
+index|]
+operator|.
+name|setPositionIncrement
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|RandomIndexWriter
+name|writer
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TextField
+argument_list|(
+literal|"field"
+argument_list|,
+operator|new
+name|CannedTokenStream
+argument_list|(
+name|tokens
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|r
+init|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+name|newSearcher
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+comment|// Sanity check; simple "a b" phrase:
+name|PhraseQuery
+operator|.
+name|Builder
+name|pqBuilder
+init|=
+operator|new
+name|PhraseQuery
+operator|.
+name|Builder
+argument_list|()
+decl_stmt|;
+name|pqBuilder
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a"
+argument_list|)
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|pqBuilder
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"b"
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|pqBuilder
+operator|.
+name|build
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+comment|// Now with "a|aa b"
+name|pqBuilder
+operator|=
+operator|new
+name|PhraseQuery
+operator|.
+name|Builder
+argument_list|()
+expr_stmt|;
+name|pqBuilder
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a"
+argument_list|)
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|pqBuilder
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"aa"
+argument_list|)
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|pqBuilder
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"b"
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|pqBuilder
+operator|.
+name|build
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+comment|// Now with "a|z b" which should not match; this isn't a MultiPhraseQuery
+name|pqBuilder
+operator|=
+operator|new
+name|PhraseQuery
+operator|.
+name|Builder
+argument_list|()
+expr_stmt|;
+name|pqBuilder
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a"
+argument_list|)
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|pqBuilder
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"z"
+argument_list|)
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|pqBuilder
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"b"
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|pqBuilder
+operator|.
+name|build
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 block|}
 DECL|method|testRandomPhrases
